Added interactive table for Mammalian Sleep

--- a/lab_4_part_2.Rmd
+++ b/lab_4_part_2.Rmd
@@ -28,9 +28,19 @@ iris_graph <- ggplot(data = iris, aes(x = Petal.Width, y = Petal.Length)) +
                  color = Species)) + 
   labs(x = "Petal width (cm)", 
        y = "Petal length (cm)",
-       title = "Iris metrics"
+       title = "Iris metrics")
 
 ggplotly(iris_graph)
 
 ```
+
+
+### Make an interactive table 
+
+```{r}
+
+datatable(msleep)
+
+```
+
 
